test_suite/alan-2022-examples/failing/008630_mutation.alan
source kl function F8k4(boolean function x) begin relax end begin relax end
